# XLLM

./: Makefile  README-CODE.md  README-DATA.md  README.md  pyproject.toml
XLLM/: __init__.py  __main__.py  pyproject.toml
XLLM/core/: __init__.py
XLLM/core/config/: __init__.py
XLLM/core/exceptions/: __init__.py  base.py
XLLM/core/models/: __init__.py
enterprise/: __init__.py  config.py  models.py  utils.py
mvp/: README.md
src/xllm/: __init__.py  xllm.py  xllm_short.py  xllm_util.py
src/xllm/build-taxonomy/: reallocate.py  taxonomy.py
src/xllm/enterprise/: README.md  __init__.py  backend.py  dev.py  processor.py  user.py
src/xllm6/: __init__.py  __main__.py  xllm6.py  xllm6_short.py  xllm6_util.py
src/xllm6/build-taxonomy/: __init__.py  reallocate.py  taxonomy.py  ~$Wolfram-stats2.xlsx
src/xllm6/enterprise/: README.md  __init__.py  backend.py  config.py  dev.py  pdf_processor.py  processor.py  user.py  utils.py
tests/: conftest.py  test_backend.py  test_basic.py  test_config.py  test_enterprise.py  test_pdf_processor.py  test_processor.py  test_taxonomy.py  test_utils.py  test_xllm6_util.py  test_xllm_util.py
