[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xllm6"
version = "0.1.0"
description = "XLLM6 - Large Language Model with unique x-embeddings feature"
requires-python = ">=3.8"
readme = "README.md"
authors = [
    {name = "Vincent Granville", email = "vincentg@mltechniques.com"},
]
dependencies = [
    "numpy",
    "requests",
    "autocorrect",
    "pattern",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.262",
]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
# Enable rules
select = ["E", "F", "B", "I"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*" 